--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
         
         <div class="ps-rel">
             <div class="container">
-                <div class="card000 ">
-                    <p class="para3 text-white">Cursus ligula habitant sed integer.</p>
-                    <p class="para4 text-white ">Urna, dictum volutpat augue tortor. Fermentum vulputate convallis
+                <div class="card000">
+                    <p class="para3 text-white mb-10 ml-10">Cursus ligula habitant sed integer.</p>
+                    <p class="para4 text-white mb-10 ml-10">Urna, dictum volutpat augue tortor. Fermentum vulputate convallis
                         viverra
                         facilisis. Aliquam porttitor sem rhoncus rhoncus, quis. Arcu, ut enim eget pellentesque neque.
                         Nibh
@@ -71,7 +71,7 @@
                         ipsum
                         leo tellus amet lacus. Varius mi urna blandit id magna tellus imperdiet tortor. Volutpat nec
                         vulputate diam tristique facilisi in turpis vel elit.</p>
-                    <p class="para5 text-white">Urna, dictum volutpat augue tortor. Fermentum vulputate convallis
+                    <p class="para5 text-white ml-10">Urna, dictum volutpat augue tortor. Fermentum vulputate convallis
                         viverra
                         facilisis. Aliquam porttitor sem rhoncus rhoncus, quis. Arcu, ut enim eget pellentesque neque.
                         Nibh
@@ -278,7 +278,7 @@
                         <td class="nmbr pd-20">1,00,000</td>
                         <td class="nmbr pd-20 pl-10">12%</td>
                         <td class="nmbr pd-20">58.3</td>
-                        <td class="nmbr pd-20">12%</td>
+                        <td class="nmbr pd-20 pl-10">12%</td>
                         <td class="nmbr pd-20">10% Monthly</td>
                     </tr>
                     <tr class="text-white">
@@ -286,7 +286,7 @@
                         <td class="nmbr1 pd-20">1,00,000</td>
                         <td class="nmbr1 pd-20 pl-10">12%</td>
                         <td class="nmbr1 pd-20">58.3</td>
-                        <td class="nmbr1 pd-20">12%</td>
+                        <td class="nmbr1 pd-20 pl-10">12%</td>
                         <td class="nmbr1 pd-20">10% Monthly</td>
 
                     </tr>
@@ -295,7 +295,7 @@
                         <td class="nmbr1 pd-20">1,00,000</td>
                         <td class="nmbr1 pd-20 pl-10">12%</td>
                         <td class="nmbr1 pd-20">58.3</td>
-                        <td class="nmbr1 pd-20">12%</td>
+                        <td class="nmbr1 pd-20 pl-10">12%</td>
                         <td class="nmbr1 pd-20">10% Monthly</td>
                     </tr>
                     <tr class="text-white">
@@ -303,7 +303,7 @@
                         <td class="nmbr1 pd-20">1,00,000</td>
                         <td class="nmbr1 pd-20 pl-10">12%</td>
                         <td class="nmbr1 pd-20">58.3</td>
-                        <td class="nmbr1 pd-20">12%</td>
+                        <td class="nmbr1 pd-20 pl-10">12%</td>
                         <td class="nmbr1 pd-20">10% Monthly</td>
                     </tr>
                     <tr class="text-white">
@@ -311,7 +311,7 @@
                         <td class="nmbr1 pd-20">1,00,000</td>
                         <td class="nmbr1 pd-20 pl-10">12%</td>
                         <td class="nmbr1 pd-20">58.3</td>
-                        <td class="nmbr1 pd-20">12%</td>
+                        <td class="nmbr1 pd-20 pl-10">12%</td>
                         <td class="nmbr1 pd-20">10% Monthly</td>
                     </tr>
                     <tr class="text-white">
@@ -319,7 +319,7 @@
                         <td class="nmbr1 pd-20">1,00,000</td>
                         <td class="nmbr1 pd-20 pl-10">12%</td>
                         <td class="nmbr1 pd-20">58.3</td>
-                        <td class="nmbr1 pd-20">12%</td>
+                        <td class="nmbr1 pd-20 pl-10">12%</td>
                         <td class="nmbr1 pd-20">10% Monthly</td>
                     </tr>
 
