font-size changes

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
         <div class="ps-rel">
             <div class="container w-100">
-                <div class="row flx-dxn-rev flex-md-row align-item-center">
+                <div class="row align-item-center">
                     <div class="col-lg-6 col-md-12">
                         <p class="para1 text-white">Accumsan ut orci vitae</p>
                         <p class="para2 text-white">Velit eget sit nibh fringilla risus ullamcorper malesuada. Morbi
@@ -58,12 +58,13 @@
             <img class="shadow-img" src="assets/images/Group1.png" alt="#">
 
         </div>
-        
+
         <div class="ps-rel">
             <div class="container">
                 <div class="card000">
                     <p class="para3 text-white mb-10 ml-10">Cursus ligula habitant sed integer.</p>
-                    <p class="para4 text-white mb-10 ml-10">Urna, dictum volutpat augue tortor. Fermentum vulputate convallis
+                    <p class="para4 text-white mb-10 ml-10">Urna, dictum volutpat augue tortor. Fermentum vulputate
+                        convallis
                         viverra
                         facilisis. Aliquam porttitor sem rhoncus rhoncus, quis. Arcu, ut enim eget pellentesque neque.
                         Nibh
@@ -90,10 +91,10 @@
     <div class="bg-black">
 
         <div class="container w-100">
-            <div class="row flex-md-row flx-dxn-rev">
+            <div class="row">
                 <div class="col-lg-6 col-md-12 ">
                     <p class="para6 mt-120 mb-40 text-white">Cursus ligula habitant sed integer.</p>
-                    <p class="para7 text-white ">Urna, dictum volutpat augue tortor. Fermentum vulputate convallis
+                    <p class="para7">Urna, dictum volutpat augue tortor. Fermentum vulputate convallis
                         viverra
                         facilisis.
                         Aliquam porttitor sem rhoncus rhoncus, quis. Arcu, ut enim eget pellentesque neque. Nibh
@@ -101,7 +102,7 @@
                     <button class="learn text-white mt-20">Learn more</button>
                 </div>
                 <div class="col-lg-6 col-md-12">
-                    <img class="teddy2 w-100 mt-80" src="assets/images/teddy1.png" alt="#">
+                    <img class="teddy2 w-100 mt-80" src="assets/images/tdy2.png" alt="#">
                 </div>
             </div>
         </div>
@@ -121,21 +122,21 @@
                         <p class="cardsvg bg-wh mx-20 d-flex align-item-center justify-content-center nmbr">1</p>
                         <div class="flx-dxn">
                             <p class="paracras text-white">Cras nunc libero ac</p>
-                            <p class="text-white amet">Amet, integer et ultrices non viverra dolor dui</p>
+                            <p class="amet">Amet, integer et ultrices non viverra dolor dui</p>
                         </div>
                     </div>
                     <div class="card11 mb-20 d-flex align-item-center">
                         <p class="cardsvg bg-wh mx-20 d-flex align-item-center justify-content-center nmbr">2</p>
                         <div class="flx-dxn">
                             <p class="paracras text-white">Cras nunc libero ac</p>
-                            <p class="text-white amet">Amet, integer et ultrices non viverra dolor dui</p>
+                            <p class="amet">Amet, integer et ultrices non viverra dolor dui</p>
                         </div>
                     </div>
                     <div class="card11 mb-20 d-flex align-item-center mb-180">
                         <p class="cardsvg bg-wh mx-20 d-flex align-item-center justify-content-center nmbr">3</p>
                         <div class="flx-dxn">
                             <p class="paracras text-white">Cras nunc libero ac</p>
-                            <p class="text-white amet">Amet, integer et ultrices non viverra dolor dui</p>
+                            <p class="amet">Amet, integer et ultrices non viverra dolor dui</p>
                         </div>
                     </div>
                 </div>
@@ -220,7 +221,7 @@
             <div class="card10 mt-22">
                 <div class="row flx-dxn-rev flex-md-row">
                     <div class="col-lg-4 col-md-6 ">
-                        <img class="w-100 mt-60 mb-40" src="assets/images/circle1.png" alt="">
+                        <img class="w-100 mt-60 ml-50 mb-40" src="assets/images/circle1.png" alt="">
 
                     </div>
                     <div class="col-lg-4 col-md-6  flx-dxn d-flex align-item-center justify-content-center">
@@ -255,78 +256,78 @@
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6  ">
-                        <img class="teddyclr  mb-40 w-100" src="assets/images/teddy1.png" alt="3">
+                        <img class="teddyclr  mb-40 w-100" src="assets/images/tdy0.png" alt="3">
 
                     </div>
                 </div>
+
+
+
+
+                <div class="table-responsive mt-50 ">
+                    <table class="col-12 card01 ">
+                        <tr class="text-white card00">
+                            <td></td>
+                            <td class="token text-white pd-20">Token</td>
+                            <td class="token pd-20">Token Price</td>
+                            <td class="token pd-20">Percentage</td>
+                            <td class="token pd-20">Token Price</td>
+                            <td class="token pd-20">Total Amount</td>
+                        </tr>
+                        <tr>
+                            <td class="nmbr text-white pd-20">Sending</td>
+                            <td class="nmbr pd-20 clr-b9">1,00,000</td>
+                            <td class="nmbr pd-20 pl-10 clr-b9">12%</td>
+                            <td class="nmbr pd-20 pl-10 clr-b9">58.3</td>
+                            <td class="nmbr pd-20 pl-10 clr-b9">12%</td>
+                            <td class="nmbr pd-20 clr-b9">10% Monthly</td>
+                        </tr>
+                        <tr>
+                            <td class="nmbr1 text-white pd-20">Sending</td>
+                            <td class="nmbr1 pd-20 clr-b9">1,00,000</td>
+                            <td class="nmbr1 pd-20 pl-10 clr-b9">12%</td>
+                            <td class="nmbr1 pd-20 pl-10 clr-b9">58.3</td>
+                            <td class="nmbr1 pd-20 pl-10 clr-b9">12%</td>
+                            <td class="nmbr1 pd-20 clr-b9">10% Monthly</td>
+
+                        </tr>
+                        <tr>
+                            <td class="nmbr1 text-white pd-20">Sending</td>
+                            <td class="nmbr1 pd-20 clr-b9">1,00,000</td>
+                            <td class="nmbr1 pd-20 pl-10 clr-b9">12%</td>
+                            <td class="nmbr1 pd-20 pl-10 clr-b9">58.3</td>
+                            <td class="nmbr1 pd-20 pl-10 clr-b9">12%</td>
+                            <td class="nmbr1 pd-20 clr-b9">10% Monthly</td>
+                        </tr>
+                        <tr>
+                            <td class="nmbr1 text-white pd-20">Sending</td>
+                            <td class="nmbr1 pd-20 clr-b9">1,00,000</td>
+                            <td class="nmbr1 pd-20 pl-10 clr-b9">12%</td>
+                            <td class="nmbr1 pd-20 pl-10 clr-b9">58.3</td>
+                            <td class="nmbr1 pd-20 pl-10 clr-b9">12%</td>
+                            <td class="nmbr1 pd-20 clr-b9">10% Monthly</td>
+                        </tr>
+                        <tr>
+                            <td class="nmbr1 text-white pd-20">Sending</td>
+                            <td class="nmbr1 pd-20 clr-b9">1,00,000</td>
+                            <td class="nmbr1 pd-20 pl-10 clr-b9">12%</td>
+                            <td class="nmbr1 pd-20 pl-10 clr-b9">58.3</td>
+                            <td class="nmbr1 pd-20 pl-10 clr-b9">12%</td>
+                            <td class="nmbr1 pd-20 clr-b9">10% Monthly</td>
+                        </tr>
+                        <tr>
+                            <td class="nmbr1 text-white pd-20">Sending</td>
+                            <td class="nmbr1 pd-20 clr-b9">1,00,000</td>
+                            <td class="nmbr1 pd-20 pl-10 clr-b9">12%</td>
+                            <td class="nmbr1 pd-20 pl-10 clr-b9">58.3</td>
+                            <td class="nmbr1 pd-20 pl-10 clr-b9">12%</td>
+                            <td class="nmbr1 pd-20 clr-b9">10% Monthly</td>
+                        </tr>
+
+
+                    </table>
+                </div>
             </div>
-
-
-
-            <div class="table-responsive mt-50 ">
-                <table class="col-12 card01 ">
-                    <tr class="text-white card00">
-                        <td></td>
-                        <td class="token pd-20">Token</td>
-                        <td class="token pd-20">Percentage</td>
-                        <td class="token pd-20">Token Price</td>
-                        <td class="token pd-20">Token Price</td>
-                        <td class="token pd-20">Total Amount</td>
-                    </tr>
-                    <tr class="text-white">
-                        <td class="nmbr pd-20">Sending</td>
-                        <td class="nmbr pd-20">1,00,000</td>
-                        <td class="nmbr pd-20 pl-10">12%</td>
-                        <td class="nmbr pd-20">58.3</td>
-                        <td class="nmbr pd-20 pl-10">12%</td>
-                        <td class="nmbr pd-20">10% Monthly</td>
-                    </tr>
-                    <tr class="text-white">
-                        <td class="nmbr1 pd-20">Sending</td>
-                        <td class="nmbr1 pd-20">1,00,000</td>
-                        <td class="nmbr1 pd-20 pl-10">12%</td>
-                        <td class="nmbr1 pd-20">58.3</td>
-                        <td class="nmbr1 pd-20 pl-10">12%</td>
-                        <td class="nmbr1 pd-20">10% Monthly</td>
-
-                    </tr>
-                    <tr class="text-white">
-                        <td class="nmbr1 pd-20">Sending</td>
-                        <td class="nmbr1 pd-20">1,00,000</td>
-                        <td class="nmbr1 pd-20 pl-10">12%</td>
-                        <td class="nmbr1 pd-20">58.3</td>
-                        <td class="nmbr1 pd-20 pl-10">12%</td>
-                        <td class="nmbr1 pd-20">10% Monthly</td>
-                    </tr>
-                    <tr class="text-white">
-                        <td class="nmbr1 pd-20">Sending</td>
-                        <td class="nmbr1 pd-20">1,00,000</td>
-                        <td class="nmbr1 pd-20 pl-10">12%</td>
-                        <td class="nmbr1 pd-20">58.3</td>
-                        <td class="nmbr1 pd-20 pl-10">12%</td>
-                        <td class="nmbr1 pd-20">10% Monthly</td>
-                    </tr>
-                    <tr class="text-white">
-                        <td class="nmbr1 pd-20">Sending</td>
-                        <td class="nmbr1 pd-20">1,00,000</td>
-                        <td class="nmbr1 pd-20 pl-10">12%</td>
-                        <td class="nmbr1 pd-20">58.3</td>
-                        <td class="nmbr1 pd-20 pl-10">12%</td>
-                        <td class="nmbr1 pd-20">10% Monthly</td>
-                    </tr>
-                    <tr class="text-white">
-                        <td class="nmbr1 pd-20">Sending</td>
-                        <td class="nmbr1 pd-20">1,00,000</td>
-                        <td class="nmbr1 pd-20 pl-10">12%</td>
-                        <td class="nmbr1 pd-20">58.3</td>
-                        <td class="nmbr1 pd-20 pl-10">12%</td>
-                        <td class="nmbr1 pd-20">10% Monthly</td>
-                    </tr>
-
-
-                </table>
-            </div>
-
         </div>
     </div>
 
